add momo payment

--- a/endpoints/test.ipynb
+++ b/endpoints/test.ipynb
@@ -4,183 +4,224 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>month</th>\n",
-       "      <th>image</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>no</td>\n",
-       "      <td>data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0 month                                              image\n",
-       "0           0     1  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...\n",
-       "1           1     3  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...\n",
-       "2           2     6  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...\n",
-       "3           3    no  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..."
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"termPeriod\": 3,\n",
+      "  \"minimumBalance\": 34494,\n",
+      "  \"maximumBalance\": 994279692,\n",
+      "  \"minimumEachTransaction\": 91990,\n",
+      "  \"maximumEachTransaction\": 837079166,\n",
+      "  \"interestRate\": 3.44,\n",
+      "  \"interestRateBeforeDueDate\": 3.9,\n",
+      "  \"title\": \"Past institution market new quality into focus someone.\",\n",
+      "  \"description\": \"Choice half second own west test media society hard cultural program itself rich meeting upon team record interview.\",\n",
+      "  \"basicDescription\": \"Out later.\",\n",
+      "  \"isActive\": 0,\n",
+      "  \"startDate\": \"2022-02-04 07:46:16.668353\",\n",
+      "  \"endDate\": \"2024-02-19 17:25:44.436633\",\n",
+      "  \"currency\": \"VND\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 2,\n",
+      "  \"minimumBalance\": 10245,\n",
+      "  \"maximumBalance\": 526315193,\n",
+      "  \"minimumEachTransaction\": 60536,\n",
+      "  \"maximumEachTransaction\": 887885071,\n",
+      "  \"interestRate\": 1.59,\n",
+      "  \"interestRateBeforeDueDate\": 4.07,\n",
+      "  \"title\": \"She energy half officer probably beat example.\",\n",
+      "  \"description\": \"Why accept rule argue table play they hard choose too major course across fire.\",\n",
+      "  \"basicDescription\": \"Remember style front case.\",\n",
+      "  \"isActive\": 0,\n",
+      "  \"startDate\": \"2024-05-24 01:47:32.083899\",\n",
+      "  \"endDate\": \"2022-10-14 08:32:08.879974\",\n",
+      "  \"currency\": \"VND\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 1,\n",
+      "  \"minimumBalance\": 15411,\n",
+      "  \"maximumBalance\": 200583668,\n",
+      "  \"minimumEachTransaction\": 70108,\n",
+      "  \"maximumEachTransaction\": 505447292,\n",
+      "  \"interestRate\": 1.27,\n",
+      "  \"interestRateBeforeDueDate\": 1.58,\n",
+      "  \"title\": \"Box discuss again keep.\",\n",
+      "  \"description\": \"Left travel explain yet beautiful history scene go newspaper miss central positive bag fill home certainly.\",\n",
+      "  \"basicDescription\": \"Body probably onto.\",\n",
+      "  \"isActive\": 0,\n",
+      "  \"startDate\": \"2022-05-06 14:18:03.915234\",\n",
+      "  \"endDate\": \"2024-03-17 17:15:00.355017\",\n",
+      "  \"currency\": \"JPY\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 0,\n",
+      "  \"minimumBalance\": 12400,\n",
+      "  \"maximumBalance\": 875078039,\n",
+      "  \"minimumEachTransaction\": 93114,\n",
+      "  \"maximumEachTransaction\": 880491747,\n",
+      "  \"interestRate\": 3.69,\n",
+      "  \"interestRateBeforeDueDate\": 2.88,\n",
+      "  \"title\": \"Consumer here without third teacher.\",\n",
+      "  \"description\": \"System family hear sort American former not start weight property.\",\n",
+      "  \"basicDescription\": \"Player car.\",\n",
+      "  \"isActive\": 1,\n",
+      "  \"startDate\": \"2021-06-19 04:44:20.654401\",\n",
+      "  \"endDate\": \"2021-08-16 01:43:50.382688\",\n",
+      "  \"currency\": \"VND\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 6,\n",
+      "  \"minimumBalance\": 31576,\n",
+      "  \"maximumBalance\": 867345414,\n",
+      "  \"minimumEachTransaction\": 92940,\n",
+      "  \"maximumEachTransaction\": 981493822,\n",
+      "  \"interestRate\": 1.12,\n",
+      "  \"interestRateBeforeDueDate\": 4.84,\n",
+      "  \"title\": \"Send Mr not these.\",\n",
+      "  \"description\": \"Her friend fund prepare radio name other series between.\",\n",
+      "  \"basicDescription\": \"Us candidate.\",\n",
+      "  \"isActive\": 1,\n",
+      "  \"startDate\": \"2023-07-10 23:01:32.154678\",\n",
+      "  \"endDate\": \"2023-09-24 12:11:12.407461\",\n",
+      "  \"currency\": \"JPY\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 1,\n",
+      "  \"minimumBalance\": 43981,\n",
+      "  \"maximumBalance\": 278863610,\n",
+      "  \"minimumEachTransaction\": 77549,\n",
+      "  \"maximumEachTransaction\": 873998212,\n",
+      "  \"interestRate\": 4.79,\n",
+      "  \"interestRateBeforeDueDate\": 3.34,\n",
+      "  \"title\": \"Mr improve night difference success decade.\",\n",
+      "  \"description\": \"Wall much pay feeling memory different always here pattern popular state agreement maintain actually such.\",\n",
+      "  \"basicDescription\": \"Operation magazine glass.\",\n",
+      "  \"isActive\": 0,\n",
+      "  \"startDate\": \"2020-06-23 00:11:32.220418\",\n",
+      "  \"endDate\": \"2022-09-06 08:56:33.475274\",\n",
+      "  \"currency\": \"EUR\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 5,\n",
+      "  \"minimumBalance\": 32473,\n",
+      "  \"maximumBalance\": 370234112,\n",
+      "  \"minimumEachTransaction\": 88187,\n",
+      "  \"maximumEachTransaction\": 478707254,\n",
+      "  \"interestRate\": 1.62,\n",
+      "  \"interestRateBeforeDueDate\": 4.39,\n",
+      "  \"title\": \"Effect none its major family forward detail.\",\n",
+      "  \"description\": \"Store bill enjoy push speak real plan outside reduce five agent couple could way others free example young impact.\",\n",
+      "  \"basicDescription\": \"Test they.\",\n",
+      "  \"isActive\": 1,\n",
+      "  \"startDate\": \"2021-11-15 05:02:31.711083\",\n",
+      "  \"endDate\": null,\n",
+      "  \"currency\": \"USD\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 3,\n",
+      "  \"minimumBalance\": 12887,\n",
+      "  \"maximumBalance\": 188358538,\n",
+      "  \"minimumEachTransaction\": 58541,\n",
+      "  \"maximumEachTransaction\": 278477831,\n",
+      "  \"interestRate\": 3.44,\n",
+      "  \"interestRateBeforeDueDate\": 3.86,\n",
+      "  \"title\": \"Image cause true party protect.\",\n",
+      "  \"description\": \"Employee past call east idea matter teacher defense today specific after magazine eight beautiful.\",\n",
+      "  \"basicDescription\": \"Sport marriage sure research.\",\n",
+      "  \"isActive\": 1,\n",
+      "  \"startDate\": \"2022-02-05 02:28:06.863896\",\n",
+      "  \"endDate\": \"2024-03-17 13:07:37.948419\",\n",
+      "  \"currency\": \"VND\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 2,\n",
+      "  \"minimumBalance\": 38139,\n",
+      "  \"maximumBalance\": 415641466,\n",
+      "  \"minimumEachTransaction\": 92005,\n",
+      "  \"maximumEachTransaction\": 171762422,\n",
+      "  \"interestRate\": 2.67,\n",
+      "  \"interestRateBeforeDueDate\": 3.55,\n",
+      "  \"title\": \"Side head answer.\",\n",
+      "  \"description\": \"Ground realize nation than skin hope whether ahead land treat some worker.\",\n",
+      "  \"basicDescription\": \"Any manage family.\",\n",
+      "  \"isActive\": 0,\n",
+      "  \"startDate\": \"2021-11-03 14:34:06.909975\",\n",
+      "  \"endDate\": \"2020-12-06 18:57:25.175710\",\n",
+      "  \"currency\": \"VND\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n",
+      "{\n",
+      "  \"termPeriod\": 2,\n",
+      "  \"minimumBalance\": 33658,\n",
+      "  \"maximumBalance\": 527089802,\n",
+      "  \"minimumEachTransaction\": 84607,\n",
+      "  \"maximumEachTransaction\": 756806661,\n",
+      "  \"interestRate\": 1.76,\n",
+      "  \"interestRateBeforeDueDate\": 1.12,\n",
+      "  \"title\": \"Particular realize bed painting consider reflect.\",\n",
+      "  \"description\": \"Ground onto machine thousand floor modern guy game learn agree front ever color summer however leg significant.\",\n",
+      "  \"basicDescription\": \"Even example structure.\",\n",
+      "  \"isActive\": 1,\n",
+      "  \"startDate\": \"2020-07-20 11:30:53.044493\",\n",
+      "  \"endDate\": null,\n",
+      "  \"currency\": \"USD\",\n",
+      "  \"image\": \"base64\"\n",
+      "}\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv('./images.csv')\n",
-    "df"
+    "from faker import Faker\n",
+    "import json\n",
+    "import random\n",
+    "\n",
+    "fake = Faker()\n",
+    "# generate a set of data for savingPlan\n",
+    "\n",
+    "def generate_data():\n",
+    "    return {\n",
+    "        \"termPeriod\": random.randint(0, 10),\n",
+    "        \"minimumBalance\": random.randint(10000, 50000),\n",
+    "        \"maximumBalance\": random.randint(100000000, 1000000000),\n",
+    "        \"minimumEachTransaction\": random.randint(50000, 100000),\n",
+    "        \"maximumEachTransaction\": random.randint(100000000, 1000000000),\n",
+    "        \"interestRate\": round(random.uniform(1, 5), 2),\n",
+    "        \"interestRateBeforeDueDate\": round(random.uniform(1, 5), 2),\n",
+    "        \"title\": fake.sentence(nb_words=6),\n",
+    "        \"description\": fake.sentence(nb_words=15),\n",
+    "        \"basicDescription\": fake.sentence(nb_words=3),\n",
+    "        \"isActive\": random.choice([0, 1]),\n",
+    "        \"startDate\": str(fake.date_time_this_decade()),\n",
+    "        \"endDate\": str(fake.date_time_this_decade()) if random.choice([True, False]) else None,\n",
+    "        \"currency\": random.choice([\"USD\", \"EUR\", \"VND\", \"JPY\"]),\n",
+    "        \"image\": \"base64\"  # You will add this manually\n",
+    "    }\n",
+    "\n",
+    "# Open a file in write mode\n",
+    "with open('fake_data.json', 'w') as f:\n",
+    "    # Generate 10 sets of data\n",
+    "    for _ in range(10):\n",
+    "        # Write each set of data into the file\n",
+    "        data =json.dumps(generate_data()) \n",
+    "        f.write(data)\n",
+    "        f.write('\\n')  # Write a newline character after each set\n",
+    "\n",
+    "# Generate 10 sets of data\n",
+    "for _ in range(10):\n",
+    "    print(json.dumps(generate_data(), indent=2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>month</th>\n",
-       "      <th>image</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>no</td>\n",
-       "      <td>data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0 month                                              image\n",
-       "0           0     1  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...\n",
-       "1           1     3  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...\n",
-       "2           2     6  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...\n",
-       "3           3    no  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..."
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyperclip\n",
-    "test = df[df['month'] =='1']['image'].to_string()[5:]\n",
-    "pyperclip.copy(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
